--- a/LadyBird_Foundation/app/src/main/res/layout/activity_location.xml
+++ b/LadyBird_Foundation/app/src/main/res/layout/activity_location.xml
@@ -157,5 +157,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.641" />
 
+    <TableLayout
+        android:id="@+id/donation_table"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:stretchColumns="1"
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@id/textView3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/location_divider" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
