Update location to a card and did contact as a card

--- a/LadyBird_Foundation/app/src/main/res/layout/activity_admin_dashboard.xml
+++ b/LadyBird_Foundation/app/src/main/res/layout/activity_admin_dashboard.xml
@@ -134,7 +134,7 @@
         app:srcCompat="@drawable/locations1" />
 
     <ImageView
-        android:id="@+id/imageView7"
+        android:id="@+id/admin_dashboard_contactUs"
         android:layout_width="160dp"
         android:layout_height="160dp"
         app:layout_constraintBottom_toBottomOf="parent"
