--- a/LadyBird_Foundation/app/src/main/res/layout/activity_admin_location.xml
+++ b/LadyBird_Foundation/app/src/main/res/layout/activity_admin_location.xml
@@ -1,51 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".adminLocation"
-    android:orientation="vertical"
-    android:layout_gravity="center"
-    android:gravity="center"
-    android:background="@drawable/home">
+    android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/alocation_image"
-        android:layout_width="173dp"
-        android:layout_height="166dp"
-        app:srcCompat="@drawable/locations1"
-        tools:layout_editor_absoluteX="109dp"
-        tools:layout_editor_absoluteY="51dp" />
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:cardCornerRadius="20dp">
 
-    <EditText
-        android:id="@+id/aLocation_address"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:ems="10"
-        android:hint="Physical Address"
-        android:inputType="text"
-        tools:layout_editor_absoluteX="55dp"
-        tools:layout_editor_absoluteY="340dp" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="375dp"
+            android:layout_height="700dp"
+            android:layout_gravity="center">
 
-    <EditText
-        android:id="@+id/aLocation_addressName"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:ems="10"
-        android:hint="Address Name"
-        android:inputType="text"
-        tools:layout_editor_absoluteX="55dp"
-        tools:layout_editor_absoluteY="273dp" />
+            <EditText
+                android:id="@+id/aLocation_address"
+                android:layout_width="300dp"
+                android:layout_height="50dp"
+                android:ems="10"
+                android:hint="Physical Address"
+                android:inputType="text"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.493"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.516" />
 
-    <Button
-        android:id="@+id/alocation_saveBtn"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:backgroundTint="#932020"
-        android:text="Save"
-        tools:layout_editor_absoluteX="55dp"
-        tools:layout_editor_absoluteY="416dp" />
+            <EditText
+                android:id="@+id/aLocation_addressName"
+                android:layout_width="300dp"
+                android:layout_height="50dp"
+                android:ems="10"
+                android:hint="Address Name"
+                android:inputType="text"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.493"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.426" />
 
+            <Button
+                android:id="@+id/alocation_saveBtn"
+                android:layout_width="300dp"
+                android:layout_height="50dp"
+                android:backgroundTint="#932020"
+                android:text="Save"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.493"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.618" />
 
-</LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
